--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>E-Bandeja: Flujo Inteligente</title>
+  <title>SIGDEP | Gestion de Derechos de Peticion</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <script src="https://cdn.jsdelivr.net/npm/mammoth@1.6.0/mammoth.browser.min.js"></script>
   <link rel="stylesheet" href="./public/styles.css">
@@ -18,10 +18,10 @@
         </svg>
       </div>
     </div>
-    <h1 class="text-2xl font-black text-slate-800 mb-2">Bandeja de Correspondencia</h1>
-    <p class="text-slate-500 mb-6">Ingresa tu contrasena para continuar</p>
-    <input type="password" id="passwordInput" placeholder="........" class="w-full p-4 border-2 border-slate-100 rounded-2xl mb-4 text-center text-xl tracking-widest outline-none focus:border-indigo-500 transition-all">
-    <button id="loginBtn" type="button" class="w-full bg-indigo-600 text-white font-bold py-4 rounded-2xl hover:bg-indigo-700 transition shadow-lg shadow-indigo-200">Ingresar</button>
+    <h1 class="text-2xl font-black text-slate-800 mb-2">SIGDEP</h1>
+    <p class="text-slate-500 mb-6">Gestiona de forma eficiente la elaboracion, revision, firma y descarga de derechos de peticion.</p>
+    <input type="password" id="passwordInput" placeholder="Contrasena de acceso" class="w-full p-4 border-2 border-slate-100 rounded-2xl mb-4 text-center text-xl tracking-widest outline-none focus:border-indigo-500 transition-all">
+    <button id="loginBtn" type="button" class="w-full bg-indigo-600 text-white font-bold py-4 rounded-2xl hover:bg-indigo-700 transition shadow-lg shadow-indigo-200">Ingresar al sistema</button>
   </div>
 
   <div id="mainInterface" class="hidden-section w-full max-w-[1500px] self-start mt-4">
@@ -33,15 +33,15 @@
           </svg>
         </div>
         <div>
-          <h1 class="text-2xl font-black text-slate-800 tracking-tight">E-Bandeja Inteligente</h1>
-          <p class="text-slate-400 text-xs font-medium uppercase tracking-wider">Gestion Documental Sin Registro</p>
+          <h1 class="text-2xl font-black text-slate-800 tracking-tight">SIGDEP</h1>
+          <p class="text-slate-400 text-xs font-medium uppercase tracking-wider">Elaboracion, revision, firma y descarga de derechos de peticion</p>
         </div>
       </div>
       <div class="flex items-center gap-4">
         <div class="text-right hidden md:block">
-          <p class="text-xs text-slate-400 font-bold uppercase">Estado del Servidor</p>
+          <p class="text-xs text-slate-400 font-bold uppercase">Estado del Servicio</p>
           <p class="text-xs text-green-500 flex items-center justify-end gap-1">
-            <span class="w-2 h-2 bg-green-500 rounded-full animate-pulse"></span> Activo (Render)
+            <span class="w-2 h-2 bg-green-500 rounded-full animate-pulse"></span> Operativo (Render)
           </p>
         </div>
         <button id="logoutBtn" type="button" class="p-3 bg-white border border-slate-200 rounded-2xl text-slate-400 hover:text-red-500 transition shadow-sm">
@@ -55,7 +55,7 @@
     <div class="grid grid-cols-1 xl:grid-cols-12 gap-6">
       <div class="xl:col-span-4 space-y-6">
         <div class="bg-white p-6 rounded-[2rem] shadow-sm border border-slate-200">
-          <h3 class="text-sm font-black text-slate-800 uppercase tracking-widest mb-4">Enviar nuevo archivo</h3>
+          <h3 class="text-sm font-black text-slate-800 uppercase tracking-widest mb-4">Cargar borrador</h3>
           <label class="group block cursor-pointer">
             <input type="file" id="mainUpload" class="hidden" accept=".pdf,.docx">
             <span class="border-2 border-dashed border-slate-100 group-hover:border-indigo-300 group-hover:bg-indigo-50 rounded-2xl p-8 text-center transition-all block">
@@ -64,15 +64,15 @@
                   <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M7 16a4 4 0 01-.88-7.903A5 5 0 1115.9 6L16 6a5 5 0 011 9.9M15 13l-3-3m0 0l-3 3m3-3v12" />
                 </svg>
               </span>
-              <span class="text-xs font-bold text-slate-500 uppercase">Click para cargar</span>
-              <span class="text-[10px] text-slate-400 mt-1 block">Soporta PDF y Word (.docx)</span>
+              <span class="text-xs font-bold text-slate-500 uppercase">Click para cargar borrador</span>
+              <span class="text-[10px] text-slate-400 mt-1 block">PDF y Word (.docx) | Maximo 20 MB</span>
             </span>
           </label>
         </div>
 
         <div class="bg-white rounded-[2rem] shadow-sm border border-slate-200 overflow-hidden">
           <div class="p-5 bg-slate-50/50 border-b border-slate-100 flex justify-between items-center">
-            <h3 class="text-sm font-black text-slate-800 uppercase tracking-widest">Documentos</h3>
+            <h3 class="text-sm font-black text-slate-800 uppercase tracking-widest">Bandeja de peticiones</h3>
             <div id="badgeCounter" class="bg-indigo-600 text-white text-[10px] px-2 py-0.5 rounded-full font-bold">0</div>
           </div>
           <div id="docList" class="p-4 space-y-3 max-h-[500px] overflow-y-auto"></div>
@@ -84,10 +84,10 @@
           <div id="previewHeader" class="p-4 bg-white border-b border-slate-100 flex justify-between items-center">
             <div class="flex items-center gap-3">
               <div id="statusDot" class="w-3 h-3 rounded-full bg-slate-200"></div>
-              <span id="previewTitle" class="text-sm font-bold text-slate-700">Visor de Documentos</span>
+              <span id="previewTitle" class="text-sm font-bold text-slate-700">Vista previa del derecho de peticion</span>
             </div>
             <div id="previewActions" class="hidden flex gap-2">
-              <button id="btnAction" type="button" class="px-4 py-1.5 bg-indigo-600 text-white text-xs rounded-xl font-bold hover:bg-indigo-700 transition">Descargar para firmar</button>
+              <button id="btnAction" type="button" class="px-4 py-1.5 bg-indigo-600 text-white text-xs rounded-xl font-bold hover:bg-indigo-700 transition">Descargar para revisar y firmar</button>
             </div>
           </div>
 
@@ -98,18 +98,18 @@
                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 12h6m-6 4h6m2 5H7a2 2 0 01-2-2V5a2 2 0 012-2h5.586a1 1 0 01.707.293l5.414 5.414a1 1 0 01.293.707V19a2 2 0 01-2 2z" />
               </svg>
             </div>
-            <p class="font-bold text-slate-400 uppercase tracking-tighter text-lg italic">Esperando seleccion</p>
-            <p class="text-sm text-slate-400 mt-2 max-w-xs">Selecciona un archivo del panel izquierdo para visualizar su contenido y estado.</p>
+            <p class="font-bold text-slate-400 uppercase tracking-tighter text-lg italic">Selecciona un derecho de peticion</p>
+            <p class="text-sm text-slate-400 mt-2 max-w-xs">Visualiza su contenido, descargalo para firma y carga la version firmada desde este flujo.</p>
           </div>
 
           <div id="previewFrameContainer" class="hidden preview-container relative">
             <iframe id="previewIframe" class="w-full h-full border-none"></iframe>
             <div id="uploadOverlay" class="absolute inset-0 bg-slate-900/40 backdrop-blur-sm hidden flex items-center justify-center p-6">
               <div class="bg-white p-8 rounded-[2rem] max-w-sm w-full shadow-2xl text-center">
-                <h4 class="font-black text-slate-800 mb-2 uppercase text-sm">Subir version firmada</h4>
-                <p class="text-xs text-slate-500 mb-6">Esta accion marcara el documento como completado y reemplazara la vista previa.</p>
+                <h4 class="font-black text-slate-800 mb-2 uppercase text-sm">Cargar version firmada</h4>
+                <p class="text-xs text-slate-500 mb-6">Esta accion marcara el derecho de peticion como firmado y actualizara la vista previa.</p>
                 <input type="file" id="secondaryUpload" class="hidden" accept=".pdf,.docx">
-                <label for="secondaryUpload" class="block w-full bg-indigo-600 text-white font-bold py-3 rounded-xl mb-3 cursor-pointer hover:bg-indigo-700 transition">Seleccionar Archivo</label>
+                <label for="secondaryUpload" class="block w-full bg-indigo-600 text-white font-bold py-3 rounded-xl mb-3 cursor-pointer hover:bg-indigo-700 transition">Seleccionar archivo firmado</label>
                 <button id="overlayCancelBtn" type="button" class="text-slate-400 text-xs font-bold hover:text-slate-600">Cancelar</button>
               </div>
             </div>
