--- a/index.html
+++ b/index.html
@@ -87,7 +87,8 @@
               <span id="previewTitle" class="text-sm font-bold text-slate-700">Vista previa del derecho de peticion</span>
             </div>
             <div id="previewActions" class="hidden flex gap-2">
-              <button id="btnAction" type="button" class="px-4 py-1.5 bg-indigo-600 text-white text-xs rounded-xl font-bold hover:bg-indigo-700 transition">Descargar para revisar y firmar</button>
+              <button id="btnDownload" type="button" class="px-4 py-1.5 bg-indigo-600 text-white text-xs rounded-xl font-bold hover:bg-indigo-700 transition">Descargar</button>
+              <button id="btnSign" type="button" class="px-4 py-1.5 bg-amber-500 text-white text-xs rounded-xl font-bold hover:bg-amber-600 transition">Firmar</button>
             </div>
           </div>
 
